<resources>
    <string name="app_name">Proyecto respaldos</string>
    <!--ITEMS MENU-->
    <string name="action_uno">Configuración de notificaciones</string>
    <string name="action_dos">Información de respaldo</string>
    <string name="action_tres">Vincular dispositivo</string>
    <string name="action_cuatro">Cerrar sesión</string>

    <!--Configurations-->
    <string name="conf_title">Información de respaldo</string>
    <string name="conf_name_device">Nombre del dispositivo</string>
    <string name="conf_storage">Almacenamiento utilizado</string>
    <string name="conf_time">Periodo de tiempo de respaldo</string>
    <string name="conf_history">Historial de respaldos</string>

    <!--Notifications-->
    <string name="notif_title">Configuración de notificaciones</string>

    <!--Login-->
    <string name="todo">TODO</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="version_1_0">version 1.0</string>
    <string name="password">Contraseña</string>
    <string name="registrarse"><u>REGISTRATE</u></string>
</resources>
