<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:id="@+id/lbl_name_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_name_device"
        android:textColor="@color/gray1"
        android:textSize="@dimen/txt_16"/>

    <TextView
        android:id="@+id/tv_name_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray3"
        android:textSize="@dimen/txt_14"/>

    <TextView
        android:id="@+id/lbl_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_storage"
        android:textColor="@color/gray1"
        android:textSize="@dimen/txt_16"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/tv_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray3"
        android:textSize="@dimen/txt_14"/>

    <TextView
        android:id="@+id/lbl_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_time"
        android:textColor="@color/gray1"
        android:textSize="@dimen/txt_16"
        android:layout_marginTop="@dimen/fab_margin"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray3"
        android:textSize="@dimen/txt_14"/>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/conf_history"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/txt_16"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_30"/>

</LinearLayout>