<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="166dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="121dp"
        android:background="@drawable/app_logo"/>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="280dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:hint="Usuario"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="217dp"
        android:layout_height="54dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="350dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:maxLength="8"/>

    <android.support.v7.widget.CardView
        android:id="@+id/btnInit"
        android:layout_width="178dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardBackgroundColor="#E91E63"
        app:cardCornerRadius="25dp"
        app:cardElevation="6dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="@dimen/margin_30">

        <RelativeLayout
            android:layout_width="224dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="69dp"
                android:text="@string/iniciar_sesion"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="32dp"
        android:text="@string/version_1_0"
        android:textColor="#BEFFFFFF"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInit"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="center">


        <TextView
            android:id="@+id/textV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Aun no estas registrado?"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/textV"
            android:layout_marginLeft="@dimen/margin_10"/>
    </RelativeLayout>
</RelativeLayout>